# pelican-bookshelf

./: .gitignore  README.md  __init__.py  bookshelf.css  bookshelf.py  pyproject.toml
.github/workflows/: testpypi_publish.yaml
pelican/plugins/bookshelf/: bookshelf.py
pelican/plugins/bookshelf/template/: bookcard.html
template/: bookcard.html
tests/: article_page.html  article_page_output.html  pelicanconf.py  test_bookshelf.py  utils.py
tests/backup/: book_page.html
tests/content/: test_page.md
