[project]
name = "pelican-bookshelf"
version = "0.1.0"
description = "A Pelican plugin used to insert book card into articles."
authors = [
    {name = "Leo", email = "im.yczeng@foxmail.com"},
]
dependencies = [
    "faker>=24.11.0",
    "lxml>=5.2.1",
    "pelican>=4.9.1",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "Markdown>=3.6",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["pelican/"]
excludes = ["static/", "tests/", "tasks.py"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
src_paths = ["./", "tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
